[tool.poetry]
name = "flask-figlate"
version = "0.1.0"
description = ""
authors = ["Barzabek <kochenko1995@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
pyfiglet = "^1.0.2"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
